--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.google.guava:guava:19.0'
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.12'
     compile 'com.jakewharton:butterknife:7.0.1'
 }
