--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:percent:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.google.guava:guava:19.0'
-    compile 'com.github.thorbenprimke:realm-recyclerview:0.9.12'
+//    compile 'com.github.thorbenprimke:realm-recyclerview:0.9.12'
+    compile 'com.github.staydecent:realm-recyclerview:411df21'
     compile 'com.jakewharton:butterknife:7.0.1'
 }
