--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "apps.staydecent.com.tabletoptally"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -25,13 +25,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:support-v13:+'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:percent:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.google.guava:guava:19.0'
-//    compile 'com.github.thorbenprimke:realm-recyclerview:0.9.12'
     compile 'com.github.staydecent:realm-recyclerview:411df21'
     compile 'com.jakewharton:butterknife:7.0.1'
 }
