--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GameActivity"
+            android:name=".ui.gamescreen.GameActivity"
             android:label="@string/title_activity_game"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".PlayerDetailsActivity" />
-        <activity android:name=".BaseActivity"></activity>
+        <activity android:name=".ui.playerscreen.PlayerDetailsActivity" />
+        <activity android:name=".ui.BaseActivity"></activity>
     </application>
 
 </manifest>
