--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="apps.staydecent.com.tabletoptally">
 
     <application
+        android:name=".app.TableTopTallyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,7 +24,6 @@
             android:label="@string/title_activity_game"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ui.playerscreen.PlayerDetailsActivity" />
-        <activity android:name=".ui.BaseActivity"></activity>
     </application>
 
 </manifest>
