--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 23
@@ -32,6 +33,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.google.guava:guava:19.0'
-    compile 'com.github.staydecent:realm-recyclerview:411df21'
+//    compile 'com.github.staydecent:realm-recyclerview:411df21'
+    compile 'com.github.thorbenprimke:realm-recyclerview:0.9.16'
     compile 'com.jakewharton:butterknife:7.0.1'
 }
